# comfycode

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_prompts.json
.github/agents/: workflow-expert.agent.md
.github/workflows/: cd.yml  ci.yml  runpod-delivery.yml
agent-output/architecture/: 004-portability-iac-cicd-architecture-findings.md  013-ai-influencer-automation-architecture-findings.md  system-architecture-diagram.mmd  system-architecture.md
agent-output/critiques/: 001-readme-documentation-critique.md  002-uv-sync-and-dev-docs-critique.md  004-ai-influencer-asset-registry-and-workflow-library-critique.md  005-portability-package-structure-refactor-critique.md  006-pulumi-azure-storage-iac-critique.md  007-cicd-pipeline-tests-iac-deploy-critique.md
agent-output/implementation/: 001-readme-documentation.md  002-uv-sync-and-dev-docs.md  003-workflow-ui-interop-and-bidirectional-conversion.md  004-ai-influencer-asset-registry-and-workflow-library.md
agent-output/planning/: 001-readme-documentation.md  002-uv-sync-and-dev-docs.md  (+7 more)
comfycode/: __init__.py  __main__.py  batch.py  comfyui_client.py  config.py  converter.py  export.py  formats.py  ir.py  layout.py  pipeline.py  runpod_client.py  ui_export.py  workflow.py
comfycode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: BLOB_CONVENTIONS.md
infra/: Pulumi.yaml  README.md  __main__.py  requirements.txt  runbook.md  settings.py
registry/: README.md
tests/: test_batch.py  test_batch_orchestrator.py  test_clothing_catalog.py  test_comfyui_client.py  test_config.py  test_converter.py  test_documentation_generator.py  test_export.py  test_formats.py  test_ir.py  test_layout.py  test_lora_registry.py  test_pipeline.py  test_prompt_generator.py  test_quality_gate.py  test_registry.py  test_ui_export.py  test_workflow.py
workflows/: CONVENTIONS.md  img2img.json  txt2img.json
(+34 files in other folders)
